<resources>
    <string name="app_name"></string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Demo</string>
    <string name="title_activity_display_message"></string>
    <string name="selecciona_una_opcion">Selecciona una opción:</string>
    <string name="insertar">Insertar</string>
    <string name="eliminar">Eliminar</string>
    <string name="mover">Mover</string>
    <string name="mesas">Mesas</string>
    <string name="title_activity_menu_">Menu_Activity</string>
    <string name="Productos">Menu</string>
    <string name="Pedidos">Pedidos</string>
    <string name="iniciarsesion">Iniciar Sesion</string>
    <string name="iniciar">Iniciar</string>
    <string name="title_activity_sesion">Sesion</string>
    <string name="title_Pedido_Activity">Pedidos</string>
    <string name="title_pedido_list">Pedidos</string>
    <string name="title_pedido_detail">pedido Detail</string>
    <string name="Nombreplato">Nombre</string>
    <string name="Numeropedido">Pedido</string>
    <string name="Numeromesa">Mesa</string>
    <string name="Precio">Precio</string>
    <string name="Cantidad">Cantidad</string>
    <string name="Cant">Cant</string>
    <string name="Disponible">Disponible</string>
    <string name="Nombremesonero">Mesonero</string>
    <string name="mesa">Mesa</string>
    <string name="Status">Estado</string>
    <string name="option1">Editar</string>
    <string name="option2">Eliminar</string>
    <string name="option3">Devolver</string>
    <string name="details">Detalles</string>
    <string name="descripcion">descripcion</string>
    <string name="facturar">Facturar</string>
    <string name="cerrar">Cerrar sesion</string>
    <string name="devolver">Devolver</string>
    <string name="devolverpedido">Devolver Pedido</string>
    <string name="media_route_menu_title">Enviar Pantalla</string>
    <string name="senderid" />
    <string name="title_activity_main">MainActivity</string>
</resources>
